# music-spectra-player

./: .gitignore  CMakeLists.txt  README.md
cmake/: generate_theme_header.cmake
shaders/: bloom_down.frag  bloom_up.frag  circle.frag  fullscreen.vert  particle.frag  particle.vert  spectrum.frag  visualizer.frag  visualizer.vert
src/: app.cpp  app.h  audio_engine.cpp  audio_engine.h  bloom.cpp  bloom.h  fft.cpp  fft.h  main.cpp  math_utils.h  particles.cpp  particles.h  playlist.cpp  playlist.h  ring_buffer.h  shader.cpp  shader.h  shaders_embed.h  themes.h  ui.cpp  ui.h  unicode_utils.h  vis.cpp  vis.h  visualizer.cpp  visualizer.h  vortex.cpp
src/assets/font-awesome/: fa-solid-900.cpp  fa-solid-900.h
src/assets/font-inter/: Inter-Regular.cpp  Inter-Regular.h
src/audio/: AudioEngine.cpp  AudioEngine.h  FFTProcessor.cpp  FFTProcessor.h
src/render/: Bloom.cpp  CircularSpectrum.cpp
src/shaders/: AfterImage.frag  after_image.cpp  after_image.h  bloom_down.frag  bloom_up.frag  composite.frag  particles.cpp  particles.h  vis.cpp  vis.h  visualizer.vert  vortex.h
src/shaders/theme_aura/: theme.cfg  vis.frag  vis.vert
src/shaders/theme_bars/: theme.cfg  vis.frag  vis.vert
src/shaders/theme_cat/: theme.cfg  vis.frag  vis.vert
src/shaders/theme_gpt/: chromatic.frag  particle.frag  theme.cfg  vis.frag  vis.vert
src/theme_v/: gpt.h  theme_gpt.h
src/visual/: gpt.h  theme_aura.h  theme_bars.h  theme_gpt.h
visual/: gpt.h
